Fix layout of grid icons on mobile

--- a/static/css/add-on.css
+++ b/static/css/add-on.css
@@ -23,6 +23,12 @@ ul.grid-icons {
   padding: 0;
 }
 
+@media screen and (max-width: 480px) {
+  ul.grid-icons {
+    width: 100%;
+  }
+}
+
 ul.grid-icons li {
   display: block;
   float: left;
